# gpms2025.1

./: README.md  programa.py  pyproject.toml
.github/workflows/: python-app.yml
fizzbuzz/: __init__.py  say.py
tests/: test_say.py
